@startuml

title __LAB4's Class Diagram__\n

  package  {
    abstract class BankAccount {
    }
  }
  

  package  {
    class BankAccountTest {
    }
  }
  

  package  {
    class ChequingAccount {
    }
  }
  

  package  {
    class SavingsAccount {
    }
  }
  

  ChequingAccount -up-|> BankAccount
  SavingsAccount -up-|> BankAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
